added base ollama functionality

--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -55,6 +55,7 @@
                 "-lSDL2",
                 "-lSDL2_ttf",
                 "${workspaceFolder}/pbui/Button.cpp",
+                "${workspaceFolder}/pbollama/OllamaFunction.cpp",
                 "${workspaceFolder}/pbui/Window.cpp"
             ],
             "group": {
