--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -56,6 +56,7 @@
                 "-lSDL2_ttf",
                 "${workspaceFolder}/pbui/Button.cpp",
                 "${workspaceFolder}/pbollama/OllamaFunction.cpp",
+                "${workspaceFolder}/pbui/Combobox.cpp",
                 "${workspaceFolder}/pbui/Window.cpp"
             ],
             "group": {
