added label (tested)

--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -57,7 +57,8 @@
                 "${workspaceFolder}/pbui/Button.cpp",
                 "${workspaceFolder}/pbollama/OllamaFunction.cpp",
                 "${workspaceFolder}/pbui/Combobox.cpp",
-                "${workspaceFolder}/pbui/Window.cpp"
+                "${workspaceFolder}/pbui/Window.cpp", 
+                "${workspaceFolder}/pbui/Label.cpp"
             ],
             "group": {
                 "kind": "build",
